--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,3 +4,11 @@
 // Basic Styles
 
 @import "basic.scss";
+
+// Layouts
+
+@import "layout.scss";
+
+// Components
+@import "components/header";
+@import "components/logo";
