--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,3 +6,4 @@ $bg-section: #edf2ec;
 $text-primary-color: #636060;
 $text-secondary-color: #8e3d1a;
 $text-link-color: #010201;
+$text-active: #e06733;
