--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,3 +7,11 @@ $text-primary-color: #636060;
 $text-secondary-color: #8e3d1a;
 $text-link-color: #010201;
 $text-active: #e06733;
+$text-black-color: #000;
+
+// Fonts
+
+$font-primary: "Inter", sans-serif;
+$font-secondary: "Inika", sans-serif;
+$font-size-base: 20px;
+$font-height-base: 35px;
