--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,9 +5,11 @@ $bg-section: #edf2ec;
 
 $text-primary-color: #636060;
 $text-secondary-color: #8e3d1a;
+$text-main-heading: #717171;
 $text-link-color: #010201;
 $text-active: #e06733;
 $text-black-color: #000;
+$text-green-color: #499a18;
 
 // Fonts
 
