--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,7 +14,11 @@
 @import "components/header";
 @import "components/logo";
 @import "components/navigation";
-
+@import "components/footer";
 // Pages
 
 @import "pages/main";
+
+// Ui
+
+@import "ui/button";
