--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -2,6 +2,14 @@
   max-width: 1440px;
   box-sizing: border-box;
   margin: 0 auto;
+  width: 100%;
   padding-left: 109px;
   padding-right: 109px;
+}
+
+.fullHeight {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
