--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @import "components/logo";
 @import "components/navigation";
 @import "components/footer";
+@import "components/socials";
 // Pages
 
 @import "pages/main";
