--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,9 +16,10 @@
 @import "components/navigation";
 @import "components/footer";
 @import "components/socials";
-// Pages
 
+// Pages
 @import "pages/main";
+@import "pages/about";
 
 // Ui
 
