--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,7 @@
 @import "components/navigation";
 @import "components/footer";
 @import "components/socials";
+@import "components/service-item";
 
 // Pages
 @import "pages/main";
