--- a/src/scss/pages/_price.scss
+++ b/src/scss/pages/_price.scss
@@ -12,8 +12,20 @@
 .price-content-left {
   max-width: 332px;
   width: 100%;
+  display: flex;
+  gap: 38px;
+  flex-direction: column;
 }
 
 .price-content-right {
   max-width: 452px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  gap: 38px;
+  &__image {
+    max-width: 152px;
+    width: 100%;
+  }
 }
