add: contacts page

--- a/src/scss/_basic.scss
+++ b/src/scss/_basic.scss
@@ -35,6 +35,9 @@ body {
   &_right {
     text-align: right;
   }
+  &_center {
+    text-align: center;
+  }
 }
 
 .green-emphasizing {
@@ -47,4 +50,31 @@ body {
 
 .grey-bg {
   background-color: $bg-section;
+}
+
+.arrow {
+  display: block;
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  top: 50%;
+  margin-top: -8px;
+  background-color: #d9d9d9;
+  right: 40px;
+  &:after {
+    width: 4px;
+    height: 4px;
+    border: 1px solid $text-main-heading;
+    border-left: 0;
+    border-top: 0;
+    transform: rotate(45deg);
+    position: absolute;
+    top: 50%;
+    margin-top: -3px;
+    left: 50%;
+    margin-left: -2px;
+    content: "";
+    display: block;
+  }
 }
