--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -1,3 +1,10 @@
+.fullHeight {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .container {
   max-width: 1440px;
   box-sizing: border-box;
@@ -6,16 +13,16 @@
   padding-left: 109px;
   padding-right: 109px;
   @media (max-width: 800px) {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  &_bottom {
+    justify-content: space-between;
   }
 }
 
-.fullHeight {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+div.isVisible {
+  visibility: visible;
 }
 
 .serviceWrapper {
