--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,9 @@
 // Backgrounds Colors
 $bg-section: #edf2ec;
 $bg-active: #d6e7d2;
+$bg-tabs-active: #c1e698;
+$bg-tabs-content: #dce9d9;
+$bg-tabs-border: #d9d9d9;
 
 // Text color
 
