add: mobile menu

--- a/src/scss/_basic.scss
+++ b/src/scss/_basic.scss
@@ -28,6 +28,7 @@ body {
   font-family: $font-primary;
   margin: 0;
   line-height: 50px;
+  margin-bottom: 20px;
   &_secondary {
     font-family: $font-secondary;
     color: $text-green-color;
