--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,12 +18,14 @@
 @import "components/socials";
 @import "components/service-item";
 @import "components/priceDetails";
+@import "components/mobileMenu";
 
 // Pages
 @import "pages/main";
 @import "pages/about";
 @import "pages/price";
 @import "pages/contacts";
+@import "pages/service";
 // Ui
 
 @import "ui/button";
