--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -41,6 +41,7 @@ div.isVisible {
 
 .buttons-tabs {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
