--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -1,12 +1,37 @@
 .nav {
   display: flex;
   align-items: center;
+  transition: 0.5s ease;
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
+  &_mobile {
+    display: flex;
+    position: fixed;
+    transform: translateX(100%);
+    left: 0;
+    top: 0;
+    background-color: rgba($color: $bg-section, $alpha: 0.95);
+    width: 100%;
+    height: 100vh;
+    padding: 5px;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 998;
+  }
+  &_active {
+    transform: translateX(0);
+  }
   &__list {
     list-style: none;
     display: flex;
     gap: 46px;
     flex-wrap: wrap;
     padding: 0;
+    &_mobile {
+      flex-direction: column;
+      text-align: center;
+    }
   }
   &__item {
     font-size: 16px;
