--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -1,6 +1,10 @@
 .about {
   padding-top: 93px;
   padding-bottom: 93px;
+  @media (max-width: 1200px) {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
   &__content {
     max-width: 605px;
   }
@@ -9,10 +13,18 @@
     justify-content: space-between;
     gap: 10px;
     align-items: center;
-    flex-wrap: wrap;
+
+    @media (max-width: 1200px) {
+      flex-wrap: wrap;
+      align-items: center;
+      flex-direction: column;
+    }
   }
   &__image {
     max-width: 464px;
     width: 100%;
+    @media (max-width: 1200px) {
+      max-width: 200px;
+    }
   }
 }
