--- a/src/scss/pages/_contacts.scss
+++ b/src/scss/pages/_contacts.scss
@@ -1,11 +1,18 @@
 .contacts {
   padding-top: 60px;
+  @media screen and (max-width: 768px) {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
   &__wrapper {
     display: flex;
     justify-content: space-between;
     @media screen and (max-width: 1200px) {
       flex-wrap: wrap;
       justify-content: center;
+    }
+    @media screen and (max-width: 768px) {
+      justify-content: flex-start;
     }
     gap: 10px;
   }
@@ -14,6 +21,9 @@
     width: 100%;
     @media screen and (max-width: 1200px) {
       order: 1;
+    }
+    @media screen and (max-width: 768px) {
+      display: none;
     }
   }
 }
@@ -24,4 +34,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  @media screen and (max-width: 768px) {
+    max-width: 100%;
+  }
 }
