--- a/src/scss/pages/_main.scss
+++ b/src/scss/pages/_main.scss
@@ -6,11 +6,19 @@
     justify-content: space-between;
     gap: 10px;
     align-items: center;
-    flex-wrap: wrap;
+    @media screen and (max-width: 768px) {
+      flex-wrap: wrap;
+    }
   }
   &__image {
     max-width: 448px;
     width: 100%;
+    @media (max-width: 1200px) {
+      max-width: 350px;
+    }
+    @media (max-width: 768px) {
+      max-width: 200px;
+    }
   }
   &__content {
     max-width: 549px;
@@ -18,5 +26,8 @@
   &__heading {
     color: $text-main-heading;
     font-size: 45px;
+    @media screen and (max-width: 768px) {
+      font-size: 20px;
+    }
   }
 }
