--- a/src/scss/pages/_price.scss
+++ b/src/scss/pages/_price.scss
@@ -1,11 +1,16 @@
 .price {
   padding-top: 40px;
   padding-bottom: 115px;
+  @media screen and (max-width: 1200px) {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
   &__wrapper {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 10px;
+    row-gap: 50px;
   }
 }
 
@@ -14,6 +19,9 @@
   width: 100%;
   display: flex;
   gap: 38px;
+  @media screen and (max-width: 1200px) {
+    gap: 0;
+  }
   flex-direction: column;
 }
 
@@ -23,9 +31,13 @@
   flex-direction: column;
   align-items: flex-end;
   flex-wrap: wrap;
+
   gap: 38px;
   &__image {
     max-width: 152px;
     width: 100%;
+  }
+  @media screen and (max-width: 1200px) {
+    align-items: center;
   }
 }
